--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <li><a href="#home">Главная</a></li>
           <li><a href="#about">Обо мне</a></li>
           <li><a href="#skills">Навыки</a></li>
-          <li><a href="#services">Что я умею</a></li>
-          <li><a href="#contact">Контакты</a></li>
+          <li><a href="#services">Что я умею (Могу все)</a></li>
+          <li><a href="#contact">Контакты +7 777 777 77 77</a></li>
           <div class="cancel-btn">
             <i class="fas fa-times"></i>
           </div>
@@ -45,8 +45,7 @@
         <div class="text">
           <div class="text-one">Привет!</div>
           <div class="text-two">Я Безбородов Вадим</div>
-          <div class="text-three">QA инженер</div>
-          <div class="text-four">из России</div>
+          <div class="text-three">QA инженер Миллионер, супер-пупер классный чувак</div>
         </div>
         <div class="button">
           <button>Тык</button>
